feat: lp melhoras

--- a/frontend/src/styles/lp.css
+++ b/frontend/src/styles/lp.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:wght@100..900&display=swap');
 
-h1, h2, h3 {
-    font-family: 'Outfit', sans-serif;
-  }
+  h1, h2, h3 {
+      font-family: 'Outfit', sans-serif;
+    }
 
   /* Fonte para os outros elementos */
 * {
@@ -43,16 +43,6 @@ h1, h2, h3 {
   nav a {
     text-decoration: none;
     color: #333;
-    font-weight: 500;
-  }
-
-  .login-btn {
-    background-color: transparent;
-    border: 1px solid #2575fc;
-    color: #2575fc;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
     font-weight: 500;
   }
 
@@ -107,6 +97,7 @@ h1, h2, h3 {
     padding: 80px 5%;
     text-align: center;
     background-color: #f9f9f9;
+    
   }
 
   .stats-container {
@@ -169,6 +160,16 @@ h1, h2, h3 {
     border-radius: 4px;
     cursor: pointer;
     margin-top: 20px;
+    font-weight: 500;
+    transition: all 0.3s ease;
+  }
+
+  .feature-cta:hover {
+    background-color: transparent;
+    color: #FF9E2C;
+    border: 1px solid #ff9800;
+    
+
   }
 
   .more-features {
@@ -291,7 +292,7 @@ h1, h2, h3 {
   .guarantee {
     padding: 60px 5%;
     text-align: center;
-    background-color: #eff8ff;
+    background-color: #e0eaff;
   }
 
   .faq {
@@ -422,6 +423,7 @@ h1, h2, h3 {
     list-style: none;
     display: flex;
     gap: 20px; /* Espaçamento entre os itens do menu */
+    
   }
 
   .nav-item {
@@ -447,17 +449,20 @@ h1, h2, h3 {
     margin-top: 10px; /* Ajuste conforme necessário */
   }
   .login-btn {
-    background-color: transparent;
+    background-color: #ff9800;
     border: 1px solid #ff9800;
-    color: #ff9800;
+    color: #ffffff;
     padding: 8px 16px;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 500;
+    transition: all 0.3s ease;
   }
 
   .login-btn:hover {
-    background-color: #ffedd3;
+    background-color: transparent;
+    border: 1px solid #ff9800;
+    color: #ff9800;
   }
 
 
